--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ data/images/*
 !data/images/bus.jpg
 !data/*.sh
 
+pretrained_weights
+
 results*.csv
 
 # Datasets -------------------------------------------------------------------------------------------------------------
