--- a/data/hyp.scratch.tiny.yaml
+++ b/data/hyp.scratch.tiny.yaml
@@ -29,3 +29,4 @@ mixup: 0.05  # image mixup (probability)
 copy_paste: 0.0  # image copy paste (probability)
 paste_in: 0.05  # image copy paste (probability), use 0 for faster training
 loss_ota: 1 # use ComputeLossOTA, use 0 for faster training
+softmax_cls: False
