--- a/data/hyp.descriptor.p5.yaml
+++ b/data/hyp.descriptor.p5.yaml
@@ -6,7 +6,7 @@ warmup_epochs: 3.0  # warmup epochs (fractions ok)
 warmup_momentum: 0.8  # warmup initial momentum
 warmup_bias_lr: 0.1  # warmup initial bias lr
 box: 0.05  # box loss gain
-cls: 0.03  # cls loss gain
+cls: 0.1  # cls loss gain
 cls_pw: 1.0  # cls BCELoss positive_weight
 obj: 0.7  # obj loss gain (scale with pixels)
 obj_pw: 1.0  # obj BCELoss positive_weight
@@ -29,4 +29,6 @@ mixup: 0.15  # image mixup (probability)
 copy_paste: 0.0  # image copy paste (probability)
 paste_in: 0.15  # image copy paste (probability), use 0 for faster training
 loss_ota: 0 # use ComputeLossOTA, use 0 for faster training
-softmax_cls: True
+am_softmax_cls: True
+am_softmax_m: 0.2
+am_softmax_s: 10
